feat: back to page

--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
 
     <div class="wrapper-buttons">
         <a href='./templates/desc.html'><button class="white-button">Bread Shop 설명</button></a>
-        <a href=''><button class="blue-button">빵 주문하기</button></a>
+    </div>
+    <br>
+    
+    <div class="wrapper-buttons">
+        <a href='https://discord.gg/hSmcG99KAk'><button class="blue-button">빵 주문하기</button></a>
     </div>
 
 </body>
