feat: overflow hidden (del scroll)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         width: 100%;
         height: 100%;
         text-align: center;
-        content-align: center;
         line-height: 1.15;
         }
 
@@ -70,7 +69,7 @@
 
     </style>
 </head>
-<body>
+<body style="overflow:hidden;"> <!-- 스크롤 없애는 코드, 삭제 금지-->
     
     <div class='text'>
         <h1>Bread Shop - 메인 페이지</h1>
@@ -81,7 +80,7 @@
         <a href='./templates/desc.html'><button class="white-button">Bread Shop 설명</button></a>
     </div>
     <br>
-    
+
     <div class="wrapper-buttons">
         <a href='https://discord.gg/hSmcG99KAk'><button class="blue-button">빵 주문하기</button></a>
     </div>
